--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,42 @@
 {
 	"presets": [
-		"es2015", 
+		"es2015",
+		"es2016",
+		"es2017",
+		"flow",
+		"latest",
+		"node6",
 		"react",
-		"stage-2"
-	]
+		"stage-2",
+		"stage-3"
+	],
+	"env": {
+		"development": {
+			"presets": [
+				"es2015",
+				"es2016",
+				"es2017",
+				"flow",
+				"latest",
+				"node6",
+				"react",
+				"stage-2",
+				"stage-3",
+				"react-hmre"
+			]
+		},
+		"production": {
+			"presets": [
+				"es2015",
+				"es2016",
+				"es2017",
+				"flow",
+				"latest",
+				"node6",
+				"react",
+				"stage-2",
+				"stage-3"
+			]
+		}
+	}
 }
