--- a/package.json
+++ b/package.json
@@ -1,28 +1,77 @@
 {
-  "name": "localhost",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Sean Delaney",
-  "license": "MIT",
-  "scripts": {
-    "start": "webpack-dev-server"
-  },
-  "dependencies": {
-    "html-webpack-plugin": "^2.28.0",
-    "path": "^0.12.7",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "redux": "^3.7.0",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
-  }
+	"name": "simple-react-redux-crud-app",
+	"version": "1.0.0",
+	"description": "Simple React + Redux CRUD App",
+	"author": "Sean Delaney",
+	"license": "MIT",
+	"main": "index.jsx",
+	"scripts": {
+		"test": "test",
+		"prestart": "babel-node --presets node6 server/startMessage.js",
+		"start": "npm-run-all --parallel open:client lint:watch",
+		"open:client": "babel-node --presets node6 server/srcServer.js",
+		"lint": "node_modules/.bin/esw webpack.config.* client server",
+		"lint:watch": "npm run lint -- --watch",
+		"clean-public": "npm run remove-public && mkdir public",
+		"remove-public": "node_modules/.bin/rimraf ./public",
+		"build:html": "babel-node --presets node6 server/buildHtml.js",
+		"prebuild": "npm-run-all clean-public lint build:html",
+		"build": "babel-node --presets node6 server/build.js",
+		"postbuild": "babel-node --presets node6 server/publicServer.js"
+	},
+	"dependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-core": "^6.25.0",
+		"babel-loader": "^7.1.0",
+		"babel-plugin-react-display-name": "2.0.0",
+		"babel-polyfill": "6.8.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-es2016": "^6.24.1",
+		"babel-preset-es2017": "^6.24.1",
+		"babel-preset-latest": "^6.24.1",
+		"babel-preset-node6": "^11.0.0",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-react-hmre": "^1.1.1",
+		"babel-preset-stage-2": "^6.24.1",
+		"babel-preset-stage-3": "^6.24.1",
+		"babel-register": "^6.24.1",
+		"bootstrap": "^3.3.7",
+		"cheerio": "^0.20.0",
+		"colors": "1.1.2",
+		"compression": "^1.6.1",
+		"cross-env": "^5.0.1",
+		"css-loader": "0.23.1",
+		"enzyme": "2.2.0",
+		"eslint": "^4.1.1",
+		"eslint-plugin-import": "^2.6.0",
+		"eslint-plugin-react": "^7.1.0",
+		"eslint-watch": "^3.1.2",
+		"eventsource-polyfill": "0.9.6",
+		"expect": "1.19.0",
+		"express": "4.13.4",
+		"extract-text-webpack-plugin": "^2.1.2",
+		"file-loader": "0.8.5",
+		"jsdom": "8.5.0",
+		"mocha": "2.4.5",
+		"nock": "8.0.0",
+		"npm-run-all": "1.8.0",
+		"open": "0.0.5",
+		"prop-types": "^15.5.10",
+		"react": "^15.6.1",
+		"react-addons-test-utils": "15.0.2",
+		"react-dom": "^15.6.1",
+		"react-redux": "^5.0.5",
+		"react-router": "^2.7.0",
+		"redux": "^3.7.1",
+		"redux-immutable-state-invariant": "1.2.3",
+		"redux-mock-store": "1.0.2",
+		"redux-thunk": "^2.2.0",
+		"rimraf": "2.5.2",
+		"style-loader": "0.13.1",
+		"url-loader": "0.5.7",
+		"webpack": "^3.0.0",
+		"webpack-dev-middleware": "^1.11.0",
+		"webpack-hot-middleware": "^2.18.0"
+	},
+	"devDependencies": {}
 }
